--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.liquibase.ext</groupId>
     <artifactId>liquibase-hbase</artifactId>
     <name>Liquibase HBASE extension</name>
     <url>https://github.com/manirajv06/liquibase-hbase</url>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2</version>
     <packaging>jar</packaging>
     <description>HBASE</description>
 
@@ -21,7 +20,8 @@
         <connection>scm:git:https://github.com/akrikheli/liquibase-hbase</connection>
         <url>http://github.com/akrikheli/liquibase-hbase</url>
         <developerConnection>scm:git:https://github.com/akrikheli/liquibase-hbase</developerConnection>
-    </scm>
+      <tag>v0.2</tag>
+  </scm>
 
     <distributionManagement>
         <snapshotRepository>
