--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>liquibase-hbase</artifactId>
     <name>Liquibase HBASE extension</name>
     <url>https://github.com/manirajv06/liquibase-hbase</url>
-    <version>0.3</version>
+    <version>0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>HBASE</description>
 
@@ -20,7 +20,7 @@
         <connection>scm:git:https://github.com/akrikheli/liquibase-hbase</connection>
         <url>http://github.com/akrikheli/liquibase-hbase</url>
         <developerConnection>scm:git:https://github.com/akrikheli/liquibase-hbase</developerConnection>
-        <tag>v0.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
